# Termstory

./: CHANGELOG.md  CONTRIBUTING.md  GREPTILE_RECOVERY.md  MANIFEST.in  README.md  TRACKER.md  agents.md  install.sh  next_features_bugfixes.md  pyproject.toml  requirements.txt  setup.py  test_corrupt3.db-shm  test_corrupt3.db.corrupt.1781442799.bak
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ai-integration.md  architecture-decisions.md  architecture.md  cli-reference.md  configuration.md  database-schema.md  privacy.md  troubleshooting.md  tui.md
scratch/: debug_formatter.py  test_table.py
scripts/: install.sh  uninstall.sh
scripts/pocs/: poc_concurrency.py  poc_debounced.py  poc_debounced_workers.py  poc_fts5.py
termstory/: __main__.py  ai.py  archive.py  ask.py  cli.py  config.py  database.py  formatter.py  git_integration.py  hermes_obs.py  insights.py  models.py  parser.py  project.py  reminder.py  sanitizer.py  search.py  timeline.py  timestamp_detective.py  tui.py
tests/: __init__.py  test_ai.py  test_ai_error_surfacing.py  test_archive.py  test_ask.py  test_avatar.py  test_bash_inspect.py  test_cli_commands.py  test_config.py  test_corrupt_db.py  test_corrupt_db2.py  test_corrupt_db3.py  test_database.py  test_edge_cases.py  test_edge_cases2.py  test_exporter.py  test_formatter_rich.py  test_fts5_new.py  test_git_integration.py  test_hermes_obs.py  test_insights.py  test_integration.py  test_macos_history_parser.py  test_macos_quirks.py  test_month.py  test_month_canvas.py  test_month_cmds.py  test_null_bytes.py  test_null_bytes_zsh.py  test_overflow.py  test_parser.py  test_project.py  test_quantum_leap.py  test_reminder.py  test_sanitizer.py  test_save_data_none_safety.py  test_search.py  test_sleep.py  test_stress.py  test_timeline.py  (+2 more)
(+3 files in other folders)
