[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termstory"
version = "0.6.3"
description = "A personal developer memory engine that tracks terminal history to rebuild the story of your projects."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "TermStory Contributors" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "python-dateutil>=2.8.2",
    "rich>=13.0.0",
    "textual>=0.50.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
rag = [
    "sentence-transformers>=2.2.0",
]

[project.scripts]
termstory = "termstory.cli:cli"

[tool.setuptools]
packages = ["termstory"]

[tool.setuptools.package-data]
termstory = ["templates/*.txt"]
